<?xml version="1.0" encoding="utf-8"?>
<!--TODO: comment and credit-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- Added by Emily Fletcher 8/28/17-->
        <!--Refactored into dialog by Emily Fletcher 9/3/17-->

        <!-- Coordinates Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/datum_coordinate_heading"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/textSize"/>

        <!-- Input Coordinates -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/inputVertCoord"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:singleLine="true"
                android:hint="@string/vertical"
                android:inputType="number"
                android:digits="1, 2, 3, 4, 5, 6, 7, 8, 9, 0, -"/>
            <EditText android:id="@+id/inputHorCoords"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:singleLine="true"
                android:hint="@string/horizontal"
                android:inputType="number"
                android:digits="1, 2, 3, 4, 5, 6, 7, 8, 9, 0, -"/>
        </LinearLayout>

        <!-- Excavators Label -->
        <!--<TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Excavators"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="17dip"/>-->

        <!-- Input excavators -->
        <!--<EditText android:id="@+id/inputExcs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:lines="4"
            android:gravity="top"/>-->

        <!-- DateOpened Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_discovered_heading"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/textSize"/>

        <!-- Input DateOpened -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/inputYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/year_hint"
                android:inputType="number"
                android:digits="0, 1, 2, 3, 4, 5, 6, 7, 8, 9"/>
            <EditText android:id="@+id/inputMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/month_hint"
                android:inputType="number"
                android:digits="0, 1, 2, 3, 4, 5, 6, 7, 8, 9"/>
            <EditText android:id="@+id/inputDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/day_hint"
                android:inputType="number"
                android:digits="0, 1, 2, 3, 4, 5, 6, 7, 8, 9"/>
        </LinearLayout>



        <!-- Reasoning Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason_heading"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/textSize"/>

        <!-- Input Reason -->
        <EditText android:id="@+id/inputReas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:lines="4"/>

        <!-- NS Dimension Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ns_dim_heading"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/textSize"/>

        <!-- Input NSDimensions -->
        <EditText android:id="@+id/inputNSDims"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:inputType="number"
            android:digits="0, 1, 2, 3, 4, 5, 6, 7, 8, 9"/>

        <!-- EW Dimension Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ew_dim_heading"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/textSize"/>

        <!-- Input EWDimensions -->
        <EditText android:id="@+id/inputEWDims"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:inputType="number"
            android:digits="0, 1, 2, 3, 4, 5, 6, 7, 8, 9"/>

    </LinearLayout>
</ScrollView>