<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:theme="@style/AppTheme"
    android:orientation="horizontal"
    android:id="@+id/selectActivity">
    <ViewSwitcher
        android:id="@+id/switchDrawView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="start">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorTextDraw"
            android:text="@string/no_draw_hint"
            android:textSize="@dimen/titleSize"
            android:textColor="@color/colorPrimaryText"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal"/>
        <com.mycompany.sip.DrawingView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/draw"
            android:layout_gravity="center_vertical|center_horizontal"
            />
    </ViewSwitcher>
    <ViewSwitcher
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:id="@+id/keySwitcher"
        android:layout_gravity="end">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:id="@+id/artifactFeatureList">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/key"
                android:gravity="center"
                android:theme="@style/titleTheme"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artifacts_heading"
                    android:layout_gravity="left"
                    android:textSize="@dimen/headingSize"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:layout_gravity="right"
                    android:id="@+id/addArtifactButton"
                    android:color="@color/colorText"
                    />
                </LinearLayout>
            <ListView
                android:id="@+id/artifactListMap"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/features_heading"
                    android:layout_gravity="left"
                    android:textSize="@dimen/headingSize"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:layout_gravity="right"
                    android:id="@+id/addFeatureButton"
                    android:color="@color/colorText"
                    />
            </LinearLayout>
            <ListView
                android:id="@+id/featureListMap"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/DrawAlert"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drawAlertTitle"
                android:gravity="center"
                android:theme="@style/titleTheme"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/highlight_prompt"
                android:layout_gravity="center|center_vertical"
                android:textSize="@dimen/textSize"
                android:layout_weight="4"
                android:layout_margin="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:id="@+id/DrawAlertSave"
                    android:layout_gravity="end"
                    android:onClick="saveImage"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:id="@+id/DrawAlertClear"
                    android:layout_gravity="start"
                    android:onClick="clearImage"/>
            </LinearLayout>
        </LinearLayout>
    </ViewSwitcher>
</LinearLayout>
