<?xml version="1.0" encoding="utf-8"?>
<!--TODO: comment and credit-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- Added by Emily Fletcher 8/28/17-->
        <!--Refactored into a dialog by Emily Fletcher 9/3/17-->

        <!-- Name Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/site_name"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/headingSize"/>

        <!-- Input Name -->
        <EditText android:id="@+id/inputName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true"
            android:textSize="@dimen/textSize"/>

        <!-- Description Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_heading"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/headingSize"/>

        <!-- Input description -->
        <EditText android:id="@+id/inputDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:lines="4"
            android:gravity="top"
            android:textSize="@dimen/textSize"/>

        <!-- DateFound Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_discovered_heading"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/headingSize"/>

        <!--TODO: figure out what to do for earlier APIs-->
        <!--
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputDate"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>
            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/inputYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/year_hint"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="4"
                android:textSize="@dimen/textSize"/>
            <EditText android:id="@+id/inputMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/month_hint"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="2"
                android:textSize="@dimen/textSize"/>
            <EditText android:id="@+id/inputDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/day_hint"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="2"
                android:textSize="@dimen/textSize"/>
        </LinearLayout>


        <!-- SiteNumber Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/site_number_heading"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/headingSize"/>

        <!-- Input Site Number -->
        <EditText android:id="@+id/inputNumb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true"/>

        <!-- Location Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="@dimen/headingSize"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Input Latitude -->
            <EditText android:id="@+id/inputLat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:digits="1234567890-."
                android:hint="latitude"
                android:layout_weight="1"/>
            <!-- Input Longitude -->
            <EditText android:id="@+id/inputLong"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:digits="1234567890-."
                android:hint="longitude"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>